@@ -1,7 +1,7 @@
 {
   "schemaVersion": 1,
   "id": "mmorpg",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "name": "Age of Exile",
   "description": "Diablo in Minecraft!",
   "authors": [
